user ve catego. id leri kalkmasından kaynaklanan ve save metodunda yapılan değişiklikler