@@ -1,10 +1,10 @@
 package com.hsgumussoy.blogsiteproject.domain.platform.article.impl;
 
-import com.hsgumussoy.blogsiteproject.domain.auth.user.api.UserDto;
 import com.hsgumussoy.blogsiteproject.domain.auth.user.api.UserService;
 import com.hsgumussoy.blogsiteproject.domain.platform.article.api.ArticleDto;
 import com.hsgumussoy.blogsiteproject.domain.platform.article.api.ArticleService;
-import com.hsgumussoy.blogsiteproject.domain.platform.category.api.CategoryDto;
+import com.hsgumussoy.blogsiteproject.domain.platform.article.impl.articlecategory.ArticleCategoryRepository;
+import com.hsgumussoy.blogsiteproject.domain.platform.article.impl.articleuser.ArticleUserRepository;
 import com.hsgumussoy.blogsiteproject.domain.platform.category.api.CategoryService;
 import com.hsgumussoy.blogsiteproject.library.utils.PageUtil;
 import lombok.RequiredArgsConstructor;
@@ -14,7 +14,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
@@ -23,33 +22,26 @@ public class ArticleServiceImpl implements ArticleService {
     private final ArticleRepository repository;
     private final UserService userService;
     private final CategoryService categoryService;
-
-    public final int ARTICLE_STATUS_NONE = 0;
-    public final int ARTICLE_STATUS_DRAFT= 1;
+    private final ArticleCategoryRepository articleCategoryRepository;
+    private final ArticleUserRepository articleUserRepository;
 
 
     @Override
     @Transactional
     public ArticleDto save(ArticleDto dto) {
-     return null;
+        return saveInitial(dto);
     }
+    public ArticleDto saveInitial(ArticleDto dto) {
+        //TODO save metodunun kayıt işlemleri nasıl yapılacağı araştırılıp yapılacak.
 
-    private ArticleDto articleIsAbsent(ArticleDto dto) {
         return null;
-    }
-
-    private ArticleDto articleIsExist(Optional<Article> article, ArticleDto articleDto) {
-        return null;
-    }
+    };
 
 
     @Override
     public ArticleDto getById(String id) {
         Article article = repository.findById(id).orElseThrow();
-        UserDto userDto = userService.getById(article.getUserId());
-        CategoryDto categoryDto = categoryService.getById(article.getCategoryId());
-
-        return ArticleMapper.toDto(article, userDto, categoryDto);
+        return ArticleMapper.toDto(article);
     }
 
     @Override
@@ -66,29 +58,11 @@ public class ArticleServiceImpl implements ArticleService {
 
     @Override
     public Page<ArticleDto> getAll(Pageable pageable) {
-        return PageToDto(repository.findAll(pageable));
+        return PageUtil.pageToDto(repository.findAll(pageable), ArticleMapper::toDto);
     }
 
     @Override
     public List<ArticleDto> getByIds(List<String> ids) {
-        List<Article> articles = repository.findAllById(ids);
-        List<CategoryDto> categoryDtoList = categoryService.getByIds(articles.stream().map(Article::getCategoryId).collect(Collectors.toList()));
-        List<UserDto> userDtoList = userService.getByIds(articles.stream().map(Article::getUserId).collect(Collectors.toList()));
-
-        return repository.findAllById(ids).stream().map(article ->ArticleMapper.toDto(article, userDtoList,categoryDtoList)).toList();
-    }
-
-    public Page<ArticleDto> PageToDto(Page<Article> articles){
-        List<String> categoryIds = articles.stream().map(Article::getCategoryId).toList();
-        List<String> userIds = articles.stream().map(Article::getUserId).toList();
-
-        List<CategoryDto> categoryDtoList = categoryService.getByIds(categoryIds);
-        List<UserDto> userDtoList = userService.getByIds(userIds);
-
-        return PageUtil.pageToDto(articles , (article)->{
-            CategoryDto categoryDto = categoryDtoList.stream().filter(category -> category.getId().equals(article.getCategoryId())).findFirst().orElseThrow();
-            UserDto userDto = userDtoList.stream().filter(user -> user.getId().equals(article.getUserId())).findFirst().orElseThrow();
-            return ArticleMapper.toDto(article, userDto, categoryDto);
-        });
+        return repository.findAllById(ids).stream().map(ArticleMapper::toDto).collect(Collectors.toList());
     }
 }
